--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -6,6 +6,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
+    background-color: #FFF8F3;
+
 }
 
 .btn-primary {
@@ -31,6 +34,7 @@ nav {
 nav>ul {
     display: flex;
     align-items: center;
+
 }
 
 nav li {
@@ -41,4 +45,36 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+.btn-second {
+    color: var(--white-color, #FFF);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border: 0px;
+    border-radius: 5px;
+    background: #FD6E0A;
+    width: 150px;
+    height: 64px;
+    flex-shrink: 0;
+}
+
+.banner {
+    padding: 30px 30px 30px 150px;
+    background-color: #FFF8F3;
+    display: flex;
+}
+
+.header {
+    background-color: #FFF8F3;
+    align-items: center;
+}
+
+.banner .profile-pic {
+    width: 500px;
+    height: 585px;
+    flex-shrink: 0;
 }
